setting of client IP and server changed

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -1628,6 +1628,9 @@ QGroupBox::title {
      </property>
     </widget>
     <widget class="QPushButton" name="btnSetIP">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="geometry">
       <rect>
        <x>260</x>
